--- a/src/app/Pages/home-page/home-page.component.css
+++ b/src/app/Pages/home-page/home-page.component.css
@@ -2,9 +2,16 @@
   font-size: 50px;
 }
 
-/*.carousel-indicators li {*/
-/*  background-color: black;*/
-/*}*/
+.logo {
+  max-height: 86px;
+  max-width: 80px;
+  height: auto;
+  width:  auto;
+}
+
+.carousel-indicators li {
+  background-color: black;
+}
 
 .black {
   color:black !important;
@@ -21,4 +28,58 @@
 
 .carousel-caption {
   margin-bottom: 15%;
+}
+
+.card {
+  margin: 30px auto;
+  width: 200px;
+  height: 200px;
+  border-radius: 30px;
+  box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.card .card_image {
+  width: inherit;
+  height: inherit;
+  border-radius: 40px;
+}
+
+.card .card_image img {
+  width: inherit;
+  height: inherit;
+  border-radius: 40px;
+  object-fit: cover;
+}
+
+.card .card_title {
+  text-align: center;
+  border-radius: 0px 0px 40px 40px;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  margin-top: -80px;
+  height: 40px;
+}
+
+.card:hover {
+  transform: scale(0.9, 0.9);
+  box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25),
+  -5px -5px 30px 15px rgba(0,0,0,0.22);
+}
+
+.title-white {
+  color: white;
+}
+
+.title-black {
+  color: black;
+}
+
+@media all and (max-width: 500px) {
+  .card-list {
+    /* On small screens, we are no longer using row direction but column */
+    flex-direction: column;
+  }
 }
