--- a/src/app/Pages/home-page/home-page.component.html
+++ b/src/app/Pages/home-page/home-page.component.html
@@ -1,8 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
   <div class="container-fluid">
-    <a href="#" class="navbar-brand">
-      <i class="fas fa-headphones-alt"></i>
-    </a>
+    <img src="../../../assets/logos/LOGO.png" class="navbar-brand logo">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -84,3 +82,80 @@
         care să contribuie în mod durabil contextului urban și natural în care se integrează, să stârnească curiozitatea și să uimească în același timp.</p>
     </div>
 </div>
+
+  <div class="cards-list">
+    <a style="text-decoration: none">
+      <div class="card 1">
+        <div class="card_image"> <img src="../../../assets/background-img/ronak-jain-508688-unsplash.jpg"> </div>
+        <div class="card_title title-white">
+
+        </div>
+      </div>
+    </a>
+  </div>
+</div>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <div class="container-fluid padding">
+      <div class="row welcome text-center">
+        <div class="col-12">
+          <h1>
+            Clienti Multumiti
+          </h1>
+        </div>
+        <hr>
+
+      </div>
+    </div>
+    </div>
+
+    <div class="item">
+      <div class="container-fluid padding">
+      <div class="row welcome text-center">
+        <div class="col-12">
+          <h1>
+            Clienti Multumiti :
+          </h1>
+        </div>
+        <hr>
+      </div>
+    </div>
+    </div>
+
+    <div class="item">
+      <div class="container-fluid padding">
+      <div class="row welcome text-center">
+        <div class="col-12">
+          <h1>
+            Clienti Multumiti
+          </h1>
+        </div>
+        <hr>
+
+      </div>
+    </div>
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+
