--- a/src/app/Pages/home-page/home-page.component.html
+++ b/src/app/Pages/home-page/home-page.component.html
@@ -94,68 +94,39 @@
     </a>
   </div>
 </div>
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="container-fluid padding">
-      <div class="row welcome text-center">
-        <div class="col-12">
-          <h1>
-            Clienti Multumiti
-          </h1>
+        <div class="row welcome text-center">
+          <div class="offset-4 col-4">
+            <h1 class="display-4">
+              Ce au spus clientii ?
+            </h1>
+            <hr>
+            <div class="carousel-inner">
+            <div class="carousel-item active">
+              <p class="lead"> Asta asa asa asa asa , asdasdsa
+              asdasda asdasd asd asd asd s</p>
+            </div>
+            <div class="carousel-item ">
+              <p class="lead"> Asta asa asa asa asa , asdasdsa
+                asdasda asdasd asd asd asd s</p>
+            </div>
+            <div class="carousel-item ">
+              <p class="lead"> Asta asa asa asa asa , asdasdsa
+                asdasda asdasd asd asd asd s</p>
+            </div>
+            </div>
+          </div>
         </div>
-        <hr>
-
       </div>
-    </div>
-    </div>
 
-    <div class="item">
-      <div class="container-fluid padding">
-      <div class="row welcome text-center">
-        <div class="col-12">
-          <h1>
-            Clienti Multumiti :
-          </h1>
-        </div>
-        <hr>
-      </div>
-    </div>
-    </div>
-
-    <div class="item">
-      <div class="container-fluid padding">
-      <div class="row welcome text-center">
-        <div class="col-12">
-          <h1>
-            Clienti Multumiti
-          </h1>
-        </div>
-        <hr>
-
-      </div>
-    </div>
-    </div>
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
+  <a class="carousel-control-prev offset-2 col-2" href="#carouselExampleControls" role="button" data-slide="prev">
+      <i class="fas fa-long-arrow-alt-left black" aria-hidden="true" ></i>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <i class="fas fa-long-arrow-alt-right black" aria-hidden="true"></i>
+      <span class="sr-only">Next</span>
+    </a>
 </div>
-
-
-
