--- a/src/app/Pages/home-page/home-page.component.html
+++ b/src/app/Pages/home-page/home-page.component.html
@@ -98,7 +98,17 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="container-fluid padding">
         <div class="row welcome text-center">
-          <div class="offset-4 col-4">
+
+
+
+          <div class="offset-md-2 col-md-8">
+            <div>
+            <a class="carousel-control-prev " href="#carouselExampleControls" role="button" data-slide="prev">
+              <i class="fas fa-long-arrow-alt-left black" aria-hidden="true" ></i>
+              <span class="sr-only">Previous</span>
+            </a>
+            </div>
+            <div class="offset-2 col-8">
             <h1 class="display-4">
               Ce au spus clientii ?
             </h1>
@@ -117,16 +127,18 @@
                 asdasda asdasd asd asd asd s</p>
             </div>
             </div>
+            </div>
+            <div>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <i class="fas fa-long-arrow-alt-right black" aria-hidden="true"></i>
+              <span class="sr-only">Next</span>
+            </a>
+            </div>
           </div>
         </div>
       </div>
 
-  <a class="carousel-control-prev offset-2 col-2" href="#carouselExampleControls" role="button" data-slide="prev">
-      <i class="fas fa-long-arrow-alt-left black" aria-hidden="true" ></i>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <i class="fas fa-long-arrow-alt-right black" aria-hidden="true"></i>
-      <span class="sr-only">Next</span>
-    </a>
+
+
+  <div class="col-2"></div>
 </div>
