--- a/src/app/Pages/home-page/home-page.component.css
+++ b/src/app/Pages/home-page/home-page.component.css
@@ -2,13 +2,6 @@
   font-size: 50px;
 }
 
-.logo {
-  max-height: 86px;
-  max-width: 80px;
-  height: auto;
-  width:  auto;
-}
-
 .carousel-indicators li {
   background-color: black;
 }
@@ -30,7 +23,7 @@
   margin-bottom: 15%;
 }
 
-.card {
+.cardus {
   margin: 30px auto;
   width: 200px;
   height: 200px;
@@ -40,20 +33,20 @@
   transition: 0.4s;
 }
 
-.card .card_image {
+.cardus .card_image {
   width: inherit;
   height: inherit;
   border-radius: 40px;
 }
 
-.card .card_image img {
+.cardus .card_image img {
   width: inherit;
   height: inherit;
   border-radius: 40px;
   object-fit: cover;
 }
 
-.card .card_title {
+.cardus .card_title {
   text-align: center;
   border-radius: 0px 0px 40px 40px;
   font-family: sans-serif;
@@ -63,7 +56,7 @@
   height: 40px;
 }
 
-.card:hover {
+.cardus:hover {
   transform: scale(0.9, 0.9);
   box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25),
   -5px -5px 30px 15px rgba(0,0,0,0.22);
@@ -75,6 +68,12 @@
 
 .title-black {
   color: black;
+}
+
+.images {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
 }
 
 @media all and (max-width: 500px) {
