--- a/src/app/Pages/home-page/home-page.component.html
+++ b/src/app/Pages/home-page/home-page.component.html
@@ -1,41 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-  <div class="container-fluid">
-    <img src="../../../assets/logos/LOGO.png" class="navbar-brand logo">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-            Home
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/about">
-            About
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/team">
-            Team
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/service">
-            Service
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/connect">
-            Connect
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
+<app-navbar></app-navbar>
 
 <div id="slides" class="carousel slide" data-ride="carousel" data-interval="false">
   <ul class="carousel-indicators">
@@ -83,24 +46,47 @@
     </div>
 </div>
 
-  <div class="cards-list">
-    <a style="text-decoration: none">
-      <div class="card 1">
-        <div class="card_image"> <img src="../../../assets/background-img/ronak-jain-508688-unsplash.jpg"> </div>
-        <div class="card_title title-white">
+<div class="row">
+  <div class="col-xl-8 offset-xl-2 col-lg-12">
+    <div class="row">
 
-        </div>
+      <div class="cards-list col-md-4 ">
+        <a style="text-decoration: none" href="#">
+          <div class="card">
+            <div class="card_image"> <img class="images" src="../../../assets/home-page/casa_stefanesti_living_room_01-600x450.jpg"> </div>
+            <div class="card_title title-white">
+
+            </div>
+          </div>
+        </a>
       </div>
-    </a>
+
+      <div class="cards-list col-md-4">
+        <a style="text-decoration: none">
+          <div class="card">
+            <img class="images" src="../../../assets/home-page/pipera.jpg">
+          </div>
+        </a>
+      </div>
+
+      <div class="cards-list col-md-4">
+        <a style="text-decoration: none">
+          <div class="card">
+            <div class="card_image"> <img class="images" src="../../../assets/home-page/pitesti_living-room_library-600x450.jpg"> </div>
+            <div class="card_title title-white">
+
+            </div>
+          </div>
+        </a>
+      </div>
+
+    </div>
   </div>
 </div>
 
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="container-fluid padding">
         <div class="row welcome text-center">
-
-
-
           <div class="offset-md-2 col-md-8">
             <div>
             <a class="carousel-control-prev " href="#carouselExampleControls" role="button" data-slide="prev">
@@ -137,8 +123,16 @@
           </div>
         </div>
       </div>
-
-
-
-  <div class="col-2"></div>
 </div>
+
+
+  <div class="cards-list col-md-4">
+    <a style="text-decoration: none">
+      <div class="cardus">
+        <div class="card_image"> <img src="../../../assets/home-page/pitesti_living-room_library-600x450.jpg"> </div>
+        <div class="card_title title-white">
+
+        </div>
+      </div>
+    </a>
+  </div>
