--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top" >
   <div class="container-fluid">
     <img src="../../../assets/logos/LOGO.png" class="navbar-brand logo">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -6,29 +6,29 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+        <li class="nav-item mr-4">
+          <a class="nav-link navLinkHover" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
             Home
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/about" routerLinkActive="active">
+        <li class="nav-item mr-4">
+          <a class="nav-link navLinkHover" routerLink="/about" routerLinkActive="active">
             About
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/team" routerLinkActive="active">
+        <li class="nav-item mr-4">
+          <a class="nav-link navLinkHover" routerLink="/team" routerLinkActive="active">
             Team
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/service" routerLinkActive="active">
-            Service
+        <li class="nav-item mr-4">
+          <a class="nav-link navLinkHover" routerLink="/service" routerLinkActive="active">
+            Services
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/connect" routerLinkActive="active">
-            Connect
+        <li class="nav-item mr-4">
+          <a class="nav-link navLinkHover" routerLink="/connect" routerLinkActive="active">
+            Contact
           </a>
         </li>
       </ul>
