--- a/src/app/Components/navbar/navbar.component.css
+++ b/src/app/Components/navbar/navbar.component.css
@@ -1,6 +1,10 @@
 .logo {
-  max-height: 86px;
-  max-width: 80px;
+  max-height: 56px;
+  max-width: 50px;
   height: auto;
   width:  auto;
+}
+
+.navLinkHover:hover {
+  font-weight: bolder;
 }
