--- a/src/app/Pages/home-page/home-page.component.css
+++ b/src/app/Pages/home-page/home-page.component.css
@@ -1,5 +1,28 @@
+
+
 .fas {
   font-size: 50px;
+}
+
+.colorWhite {
+  color:white !important;
+}
+
+.colorBlack {
+  color:black !important;
+}
+
+.marginTopClass {
+  margin-top:10vh;
+}
+
+.backgroundCarousel {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 80vh;
+  color:white;
+  background-image: url("/assets/background-img/clienti_multumiti-1.jpg");
 }
 
 .carousel-indicators li {
@@ -74,6 +97,11 @@
   width: 100%;
   height: 15vw;
   object-fit: cover;
+}
+
+.images:hover {
+  cursor: pointer;
+  opacity: 0.2;
 }
 
 @media all and (max-width: 500px) {
