--- a/src/app/Pages/home-page/home-page.component.html
+++ b/src/app/Pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar class="fixed-nav"></app-navbar>
 
 <div id="slides" class="carousel slide" data-ride="carousel" data-interval="false">
   <ul class="carousel-indicators">
@@ -12,12 +12,12 @@
       <div class="carousel-caption">
         <h1 class="display-4 black">Contemoran Design</h1>
         <h3 class="black">ARHITECTURA CU DESIGN SI SENS</h3>
-        <button type="button" class="btn btn-outline-light btn-lg">
+        <a routerLink="/service" class="btn btn-outline-dark btn-lg colorBlack">
           <strong>Servicii</strong>
-        </button>
-        <button type="button" class="btn btn-dark btn-lg ml-1">
+        </a>
+        <a routerLink="/design" class="btn btn-light btn-lg colorBlack ml-1">
           Design
-        </button>
+        </a>
       </div>
     </div>
 
@@ -34,8 +34,7 @@
 </div>
 
 
-<div class="container-fluid">
-  <div class="row jumbotron">
+<div class="row jumbotron">
     <div class="col-xs-12">
       <p class="lead text-center">
         Space Sparkle înseamnă arhitectură și design cu sens, reflectate în <a href="#" style="text-decoration: none">proiecte</a> inteligente, estetice, funcționale și inovatoare.
@@ -46,12 +45,12 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row marginTopClass">
   <div class="col-xl-8 offset-xl-2 col-lg-12">
     <div class="row">
 
       <div class="cards-list col-md-4 ">
-        <a style="text-decoration: none" href="#">
+        <a style="text-decoration: none">
           <div class="card">
             <div class="card_image"> <img class="images" src="../../../assets/home-page/casa_stefanesti_living_room_01-600x450.jpg"> </div>
             <div class="card_title title-white">
@@ -84,47 +83,76 @@
   </div>
 </div>
 
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="container-fluid padding">
-        <div class="row welcome text-center">
-          <div class="offset-md-2 col-md-8">
-            <div>
+<div class="backgroundCarousel marginTopClass moving">
+  <div id="carouselExampleControls" class="carousel slide " data-ride="carousel">
+      <div class="row welcome text-center">
+        <div class="offset-md-2 col-md-8">
+          <div>
             <a class="carousel-control-prev " href="#carouselExampleControls" role="button" data-slide="prev">
-              <i class="fas fa-long-arrow-alt-left black" aria-hidden="true" ></i>
+              <i class="fas fa-long-arrow-alt-left white" aria-hidden="true" ></i>
               <span class="sr-only">Previous</span>
             </a>
-            </div>
-            <div class="offset-2 col-8">
+          </div>
+          <div class="offset-2 col-8">
             <h1 class="display-4">
               Ce au spus clientii ?
             </h1>
-            <hr>
+            <hr style="border-color:white;">
             <div class="carousel-inner">
-            <div class="carousel-item active">
-              <p class="lead"> Asta asa asa asa asa , asdasdsa
-              asdasda asdasd asd asd asd s</p>
+              <div class="carousel-item active">
+                <p class="lead"> Asta asa asa asa asa , asdasdsa
+                  asdasda asdasd asd asd asd s</p>
+              </div>
+              <div class="carousel-item ">
+                <p class="lead"> Asta asa asa asa asa , asdasdsa
+                  asdasda asdasd asd asd asd s</p>
+              </div>
+              <div class="carousel-item ">
+                <p class="lead"> Asta asa asa asa asa , asdasdsa
+                  asdasda asdasd asd asd asd s</p>
+              </div>
             </div>
-            <div class="carousel-item ">
-              <p class="lead"> Asta asa asa asa asa , asdasdsa
-                asdasda asdasd asd asd asd s</p>
-            </div>
-            <div class="carousel-item ">
-              <p class="lead"> Asta asa asa asa asa , asdasdsa
-                asdasda asdasd asd asd asd s</p>
-            </div>
-            </div>
-            </div>
-            <div>
+          </div>
+          <div>
             <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <i class="fas fa-long-arrow-alt-right black" aria-hidden="true"></i>
+              <i class="fas fa-long-arrow-alt-right white" aria-hidden="true"></i>
               <span class="sr-only">Next</span>
             </a>
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
+
+  <div class="row jumbotron" style="background-color: #171617">
+      <div class="offset-3 col-6">
+        <div class="row positionCenter">
+          <div class="col-md-4 colorWhite text-center">
+            <p class="colorWhite"><b>NE GĂSEȘTI AICI</b></p>
+            <p class="colorWhite">
+              Splaiul Unirii, Nr. 160,
+              Incinta Mater, Etajul I
+              București, România, 040041
+            </p>
+          </div>
+          <div class="col-md-4 colorWhite text-center">
+            <p class="colorWhite"><b>CONTACTEAZĂ-NE</b></p>
+            <p class="colorWhite">
+              hello@spacesparkle.ro
+              +40 740 27 10 32
+              +40 726 11 50 84
+            </p>
+          </div>
+          <div class="col-md-4 colorWhite text-center">
+            <p class="colorWhite"><b>URMĂREȘTE-NE ȘI AICI</b></p>
+            <div>
+              <i class="fab fa-facebook mr-2"></i>
+              <i class="fab fa-instagram"></i>
             </div>
           </div>
         </div>
       </div>
-</div>
-
+  </div>
 
   <div class="cards-list col-md-4">
     <a style="text-decoration: none">
