--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top" >
   <div class="container-fluid">
-    <img src="../../../assets/logos/LOGO.png" class="navbar-brand logo">
+    <img src="../../../assets/logos/gri.png" class="navbar-brand logo">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
       <span class="navbar-toggler-icon"></span>
     </button>
