--- a/src/app/Pages/design/design.component.html
+++ b/src/app/Pages/design/design.component.html
@@ -45,7 +45,7 @@
 
 </div>
 
-<div class="displayProjectImg">
+<div class="displayProjectImg category">
   <div class="row">
     <div class="offset-md-2 col-md-4 text-center">IMAGINE</div>
     <div class="col-md-4 text-center">IMAGINE</div>
